fix: fix ItemRepository query method and add IDs to NotFound exeptions